k8s/beachcomb_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beachcomb-deployment
  labels:
    app: beachcomb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beachcomb
  template:
    metadata:
      labels:
        app: beachcomb
    spec:
      containers:
        - name: beachcomb
          image: europe-west3-docker.pkg.dev/dse24-group-12/dse-repo/beachcomb_service:latest
          #imagePullPolicy: Never
          ports:
            - containerPort: 8002
