k8s/control_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-deployment
  labels:
    app: control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control
  template:
    metadata:
      labels:
        app: control
    spec:
      containers:
        - name: control
          image: docker.io/library/control_service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
