k8s/inventory_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: europe-west3-docker.pkg.dev/dse24-group-12/dse-repo/inventory_service:latest
          #imagePullPolicy: Never
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /inventory/health
              port: 8001
          livenessProbe:
            httpGet:
              path: /inventory/health
              port: 8001
