k8s/beachcomb-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: test-service1
spec:
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#  type: NodePort
