k8s/beachcomb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beachcomb-service
spec:
  selector:
    app: beachcomb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
