k8s/control_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-service
spec:
  type: NodePort
  selector:
    app: control
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
