k8s/dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
