k8s/inventory_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  type: NodePort
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
