k8s/rabbitmq_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-ui-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
