k8s/dse2024-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dse2024-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
    - http:
        paths:
          - path: /test1
            pathType: Prefix
            backend:
              service:
                name: test-service1
                port:
                  number: 80
